<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EEGActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="362dp">
        <TextView
            android:id="@+id/state_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_state"
            />

        <TextView
            android:id="@+id/attention_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/waiting_for_attention_signal"
            />

<!--        <TextView-->
<!--            android:id="@+id/tv_meditation"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="15dp"-->
<!--            android:text="@string/waiting_for_meditation_signal" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_blink"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="15dp"-->
<!--            android:text="@string/waiting_for_blink_signal"-->
<!--            />-->
        <Button
            android:id="@+id/connect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            />

        <Button
            android:id="@+id/start_monitoring_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_monitoring"
            />

        <Button
            android:id="@+id/stop_monitoring_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_monitoring"
            />

        <Button
            android:id="@+id/disconnect_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disconnect"
            />
    </LinearLayout>

    <Button
    android:id="@+id/goto_gsr_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="152dp"
    android:layout_marginBottom="116dp"
    android:text="@string/Continue"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>